--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,5 @@
 *{
     box-sizing: border-box;
-    overflow-x: hidden;
 }
 body{
     background-color: #000000;
@@ -206,6 +205,9 @@ p{
     font-size: 13px;
 }
 @media screen and (max-width:640px) {
+    *{
+        overflow-x: scroll;
+    }
     .div-grid{
         grid-template-columns:repeat(2,1fr) ;
     }
