--- a/stylesheet.css
+++ b/stylesheet.css
@@ -204,8 +204,11 @@ p{
     margin-bottom: 3rem;
     font-size: 13px;
 }
-@media screen and (max-width:640px) {
+@media screen and (max-width:620px) {
     .div-grid{
         grid-template-columns:repeat(2,1fr) ;
+    }
+    .content{
+    scale: 0.5;
     }
 }
