--- a/stylesheet.css
+++ b/stylesheet.css
@@ -205,6 +205,9 @@ p{
     font-size: 13px;
 }
 @media screen and (max-width:620px) {
+    *{
+        overflow-x:hidden;
+    }
     .div-grid{
         grid-template-columns:repeat(2,1fr) ;
     }
